# ruxy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/dashboard/: package.json
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/design-guide/: page.tsx
apps/dashboard/app/events/: page.tsx
apps/dashboard/app/health/: page.tsx
apps/dashboard/app/logs/: page.tsx
apps/dashboard/app/metrics/: page.tsx
apps/dashboard/app/proxies/: actions.ts  page.tsx
apps/dashboard/app/settings/: page.tsx
apps/dashboard/components/: dashboard-action.tsx  dashboard-checkbox.tsx  dashboard-frame.tsx  dashboard-input.tsx  dashboard-page-header.tsx  dashboard-select.tsx  dashboard-sidebar.tsx  dashboard-toast-provider.tsx  proxies-workspace.tsx  proxy-list-panel.tsx  proxy-toolbar.tsx  settings-form.tsx
apps/dashboard/lib/: api.ts  mock-data.ts
crates/application/: Cargo.toml
crates/application/src/: errors.rs  ports.rs  services.rs
crates/core-api/: Cargo.toml
crates/core-api/src/: app_state.rs  dto.rs  main.rs
crates/core-api/src/routes/: events.rs  health.rs  metrics.rs  mod.rs  proxies.rs  settings.rs
crates/domain/: Cargo.toml
crates/domain/src/: health.rs  proxy.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/db/: postgres.rs
crates/infrastructure/src/health/: mod.rs  simulated_checker.rs
crates/infrastructure/src/repositories/: in_memory_proxy_repository.rs  mod.rs  postgres_proxy_repository.rs  postgres_settings_repository.rs
crates/infrastructure/src/telemetry/: mod.rs  postgres_telemetry_repository.rs
crates/proxy-server/: Cargo.toml
crates/proxy-server/src/: main.rs
crates/shared/: Cargo.toml
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
docs/: api-contract-v1.md  health-state-machine.md  schema-v1.md  sprint-0.md
infra/docker/: core-api.Dockerfile  dashboard.Dockerfile  proxy-server.Dockerfile  worker.Dockerfile
infra/postgres/: init.sql
scripts/: dev-local.sh  dev.sh  migrate.sh  reset.sh  seed-proxies.sh
