[workspace]
resolver = "2"
members = [
  "crates/domain",
  "crates/application",
  "crates/infrastructure",
  "crates/core-api",
  "crates/proxy-server",
  "crates/worker",
  "crates/shared",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks", "http2"] }
