[package]
name = "infrastructure"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
application = { path = "../application" }
domain = { path = "../domain" }
shared = { path = "../shared" }
anyhow.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
