[package]
name = "proxy-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
application = { path = "../application" }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
reqwest.workspace = true
