[package]
name = "worker"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
application = { path = "../application" }
chrono.workspace = true
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
anyhow.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
